syntax = "proto3";

package control_pb;
option go_package = "github.com/parasource/rhosus/rhosus/pb/control_pb";

// <---------------------------------->
// Control service is an implementation
// of a RAFT consensus algorithm.
// <---------------------------------->

service Control {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc EntryCommitted (EntryCommittedRequest) returns (EntryCommittedResponse);
  rpc Shutdown (Void) returns (Void) {}
  rpc Alive (Void) returns (Void) {}
  rpc Offline (Void) returns (Void) {}
  rpc Online (Void) returns (Void) {}
}

message Void {

}

message RequestVoteRequest {
  uint32 term = 1;
  string candidateUid = 2;
  int64 lastLogIndex = 3;
  uint32 lastLogTerm = 4;
}

message RequestVoteResponse {
  string from = 1;
  string term = 2;
  uint32 voteGranted = 3;
}

message AppendEntriesRequest {
  uint32 term = 1;
  string leaderUid = 2;
  int64 prevLogIndex = 3;
  uint32 prevLogTerm = 4;
  repeated uint32 entriesTerm = 5;
  repeated Entry entries = 6;
  int64 leaderCommit = 7;
}

message AppendEntriesResponse {
  string from = 1;
  uint32 term = 2;
  uint32 success = 3;
  int64 lastAgreedIndex = 4;
}

message EntryCommittedRequest {
  uint32 term = 1;
}

message EntryCommittedResponse {

}

message Entry {
  int64 index = 1;
  uint32 term = 2;
  enum Type {
    ASSIGN = 0;
    DELETE = 1;
  }
  Type type = 3;

  // data is a marshalled one of the above types message
  bytes data = 4;
  int64 timestamp = 5;

  // magic number ;)
  float version = 69;
}

message OffsetRange {
  uint64 from = 1;
  uint64 to = 2;
}

message EntryAssign {
  string nodeUid = 1;
  map<string, OffsetRange> blocks = 2;
}

message EntryDelete {
  string nodeUid = 1;
  repeated string blocks = 2;
}
